@@ -9,9 +9,11 @@ package org.tros.utils.logging;
 import java.awt.Color;
 import java.io.PrintWriter;
 import java.io.StringWriter;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.List;
 import java.util.TimerTask;
 import java.util.logging.Filter;
 import java.util.logging.Formatter;
@@ -48,6 +50,7 @@ public final class SwingComponentHandler extends Handler {
     private final java.util.Timer timer;
     private int maxSize;
     private int timeField;
+    private boolean test = false;
 
     static {
         STYLE_MAP = new HashMap<>();
@@ -141,49 +144,101 @@ public final class SwingComponentHandler extends Handler {
         Logger.getLogger(SwingComponentHandler.class.getName()).log(Level.FINE, "Started...");
     }
 
+    public boolean checkTesting() {
+        return test;
+    }
+
+    public void testConfigure(int which) {
+        test = true;
+        switch (which) {
+            case 1:
+                configSize();
+            case 2:
+                configTime();
+            case 3:
+                configLevel();
+            case 4:
+                configFormat();
+            case 5:
+                configFilter();
+        }
+    }
+
     private void configure() {
+        configSize();
+        configTime();
+        configLevel();
+        configFormat();
+        configFilter();
+    }
+
+    private void configSize() {
         LogManager manager = LogManager.getLogManager();
         String cname = getClass().getName();
-
         String size = manager.getProperty(cname + ".limit");
         int s = 50000;
+        if (test) {
+            size = "5";
+        }
         if (size != null) {
             try {
+                test = false;
                 s = Integer.parseInt(size);
             } catch (IllegalArgumentException ex) {
                 Logger.getLogger(SwingComponentHandler.class.getName()).log(Level.SEVERE, null, ex);
             }
         }
         this.setLimit(s);
+    }
 
+    private void configTime() {
+        LogManager manager = LogManager.getLogManager();
+        String cname = getClass().getName();
         String timerProp = manager.getProperty(cname + ".timer");
         int time = 500;
-        if (timer != null) {
+        if (timer != null || test) {
             try {
+                test = false;
                 time = Integer.parseInt(timerProp);
             } catch (IllegalArgumentException ex) {
                 Logger.getLogger(SwingComponentHandler.class.getName()).log(Level.SEVERE, null, ex);
             }
         }
         this.timeField = time;
+    }
 
+    private void configLevel() {
+        LogManager manager = LogManager.getLogManager();
+        String cname = getClass().getName();
         String level = manager.getProperty(cname + ".level");
         Level def = Level.INFO;
+        if (test) {
+            level = "five";
+        }
         if (level != null) {
             try {
+                test = false;
                 def = Level.parse(level);
             } catch (IllegalArgumentException ex) {
                 Logger.getLogger(SwingComponentHandler.class.getName()).log(Level.SEVERE, null, ex);
             }
         }
         this.setLevel(def);
+    }
 
+    private void configFormat() {
+        LogManager manager = LogManager.getLogManager();
+        String cname = getClass().getName();
         String formatter = manager.getProperty(cname + ".formatter");
         Formatter fmmt = null;
+        if (test) {
+            formatter = "test";
+        }
         if (formatter != null) {
             try {
-                fmmt = (Formatter) Class.forName(formatter).newInstance();
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+                test = false;
+                fmmt = (Formatter) Class.forName(formatter).getConstructor().newInstance();
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
                 Logger.getLogger(SwingComponentHandler.class.getName()).log(Level.SEVERE, null, ex);
             }
         }
@@ -191,13 +246,21 @@ public final class SwingComponentHandler extends Handler {
             fmmt = new SimpleFormatter();
         }
         this.setFormatter(fmmt);
+    }
 
+    private void configFilter() {
+        LogManager manager = LogManager.getLogManager();
+        String cname = getClass().getName();
         String filter = manager.getProperty(cname + ".filter");
         Filter filt = null;
+        if (test) {
+            filter = "test";
+        }
         if (filter != null) {
             try {
-                filt = (Filter) Class.forName(filter).newInstance();
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+                test = false;
+                filt = (Filter) Class.forName(filter).getConstructor().newInstance();
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
                 Logger.getLogger(SwingComponentHandler.class.getName()).log(Level.SEVERE, null, ex);
             }
         }
@@ -237,6 +300,10 @@ public final class SwingComponentHandler extends Handler {
 
     public static void pause() {
         paused = !paused;
+    }
+
+    public boolean isPaused() {
+        return paused;
     }
 
     private void timer() {
@@ -302,5 +369,14 @@ public final class SwingComponentHandler extends Handler {
             });
             TEXT_AREA.select(DOC.getLength(), DOC.getLength());
         });
+    }
+
+    /**
+     * For testing of publish method.
+     *
+     * @return the list of records to process.
+     */
+    public List<LogRecord> getRecords() {
+        return records;
     }
 }
